angular users controlers

--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>flybox</title>
   <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
-  <div data-ng-app="app">
+  <div data-ng-app="flyboxApp">
     <div data-ng-view>
     </div>
   </div>
