matching up with safas UI

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>flybox</title>
-  <link rel="stylesheet" href="main.css"/>
+  <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
+
   <div data-ng-app="flyboxApp">
     <div data-ng-view>
     </div>
