--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>flybox</title>
+  <title>Flybox.io - Email reimagined.</title>
 </head>
 <body>
 
@@ -10,7 +10,7 @@
     <div data-ng-view>
     </div>
   </div>
-  
+
   <script src="client_bundle.js"></script>
 </body>
 </html>
